RIT Performance Improvement (#373)
* fix srte actuator

* virtual thread

* kafka batch and fixed size pool thread

* jdbc template and thread

* add thread env

* update

* tweak

* enabled scheduling

* RTI

* update config

* tried acquireUninterruptibly

* update

* optimized hikari

* transction

* update using cache pool for uid

* Utilize in service cache and uid cache -- update to use Transaction

* clean up kafka consumer

* refactoring manager service

* refactored observation

* refactored entityReposUtil

* refactoring patient repos util

* refactoring patient matching base service

* refactoring Decsion support

* cleaning un use import

* clean up - remove unused import and class

* adjust DI hikari pool

* mess around with handleLabConsumer

* update default topic name

* remove jdbc flag

* apply env var to uid pool size

* remove jdbc flg

* more env var to support multi thread

* apply env var to main kafka consumer

* tried splitting trouble transaction

* add dockerfile for window

* update kafka config and kafka consumer

* fix test

* update app yaml

* remove try catch

* remove try catch

* removed try catch

* fix case management id

* remove unnecessary logic for edx log

* clean up manager

* removed try catch

* fix image binary type for obs value text

* add helper class

* update

* to do

* remove tranasction for step 3

* Changed majority of JPA to JDBC

* code clean

- Planning for DLQ queue

* hikari size for DI

* forcing null last update

* TS check

* more HIKARI config and UUID Pool retry

* small clean up

* hikari config

* Remove Suppress Warning and Fix some unit test

* Fixed failed test

* more fixing for unit test

* fix SRTE service

* codeq bug

* Add Unit test for JdbcTemplate

* More Unit Test

* unit test

* test

* code smell

* code smell

* fix test

* clean up

* code smell

* code smell

* clean up

* fix minor typos

* codesmell

* clean up

* codesmell

* codesmell

* clean up

* clean up

* test

* unit test
